<resources>
    <string name="app_name">ITStore</string>
    <string name="ITStore">ITStore</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>
    <string name="Logar">Logar</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="esqueciSenha">Esqueci a Senha</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Nome</string>
    <string name="Salvar">Salvar</string>
    <string name="Recuperar">Recuperar</string>
    <string name="CadastroProduto">Cadastro de Produtos</string>
    <string name="Preco">Preço</string>
</resources>
